<resources>
    <string name="app_name">Cookit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="feed_actionbar_title">Feed</string>
    <string name="profile_actionbar_title">Profile</string>
    <string name="add_post_actionbar_title">Add post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_fragment_navigate_to_add_edit_recipe">add recipe</string>
    <string name="recipe_name">recipe name</string>
    <string name="recipe_description">recipe description:</string>
    <string name="take_picture">take picture</string>
    <string name="publish">publish</string>
    <string name="add_recipe_title">add new recipe</string>
    <string name="take_picture_error">could not take picture</string>
    <string name="take_picture_permission">camera permission is required</string>
    <string name="general_error_message">somthing went wrong, please try again</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_add_recipe">Add recipe</string>
    <string name="drawer_logout">Logout</string>
    <string name="feed_title">Feed</string>
    <string name="profile_title">Profile</string>
    <string name="recipe_info_title">Recipe info</string>
    <string name="map_title">Map</string>
    <string name="edit_recipe_title">edit recipe</string>
    <string name="ask_camera_and_storage_permission">To take picture the app need permission for camera and stoarge</string>
    <string name="ask_location_permission">To publish the recipe, the app need your phone location</string>
    <string name="ask_current_location_map_permission">The app need your permission to display your current location</string>
    <string name="invalid_recipe_name">Recipe must have name</string>
    <string name="invalid_recipe_description">Recipe must have description</string>
    <string name="invalid_recipe_picture">Recipe must have picture</string>
    <string name="no_data_available">No Recipes to show</string>
</resources>
